language-server/src/tests/snapshots/gleam_language_server__tests__action__add_annotation_triggers_on_function_curly_brace.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() { 1 }"
---
----- BEFORE ACTION
pub fn main() { 1 }
              ↑    


----- AFTER ACTION
pub fn main() -> Int { 1 }
