language-server/src/tests/snapshots/gleam_language_server__tests__action__add_correct_type_annotation_for_non_variable_use.snap
---
source: language-server/src/tests/action.rs
expression: "\nfn usable(f) {\n  f(#(1, 2))\n}\n\npub fn main() {\n  use #(a, b) <- usable\n  a + b\n}\n"
---
----- BEFORE ACTION

fn usable(f) {
  f(#(1, 2))
}

pub fn main() {
  use #(a, b) <- usable
  ▔▔▔▔▔▔▔▔▔↑           
  a + b
}


----- AFTER ACTION

fn usable(f) {
  f(#(1, 2))
}

pub fn main() {
  use #(a, b): #(Int, Int) <- usable
  a + b
}
