language-server/src/tests/snapshots/gleam_language_server__tests__action__add_missing_generic_parameter_for_single_constructor.snap
---
source: language-server/src/tests/action.rs
expression: "\ntype GenericType {\n  GenericType(field: t)\n}\n"
---
----- BEFORE ACTION

type GenericType {
  GenericType(field: t)
                     ↑ 
}


----- AFTER ACTION

type GenericType(t) {
  GenericType(field: t)
}
