language-server/src/tests/snapshots/gleam_language_server__tests__action__add_missing_patterns_adds_a_discard_for_opaque_type.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wibble\n\npub fn main(w: wibble.Wibble) {\n  case w {}\n}\n"
---
----- BEFORE ACTION

import wibble

pub fn main(w: wibble.Wibble) {
  case w {}
         ↑ 
}


----- AFTER ACTION

import wibble

pub fn main(w: wibble.Wibble) {
  case w {
    _ -> todo
  }
}
