language-server/src/tests/snapshots/gleam_language_server__tests__action__add_missing_patterns_adds_a_discard_for_opaque_type_1.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wibble\n\npub type Type {\n  Type(wibble: wibble.Wibble, list: List(Int))\n}\n\npub fn main(thing: Type) {\n  case thing {}\n}\n"
---
----- BEFORE ACTION

import wibble

pub type Type {
  Type(wibble: wibble.Wibble, list: List(Int))
}

pub fn main(thing: Type) {
  case thing {}
             ↑ 
}


----- AFTER ACTION

import wibble

pub type Type {
  Type(wibble: wibble.Wibble, list: List(Int))
}

pub fn main(thing: Type) {
  case thing {
    Type(wibble:, list:) -> todo
  }
}
