language-server/src/tests/snapshots/gleam_language_server__tests__action__add_missing_patterns_adds_a_discard_for_opaque_type_2.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wibble\n\npub type Type {\n  Type(wibble.Wibble)\n}\n\npub fn main(thing: Type) {\n  case thing {}\n}\n"
---
----- BEFORE ACTION

import wibble

pub type Type {
  Type(wibble.Wibble)
}

pub fn main(thing: Type) {
  case thing {}
             ↑ 
}


----- AFTER ACTION

import wibble

pub type Type {
  Type(wibble.Wibble)
}

pub fn main(thing: Type) {
  case thing {
    Type(_) -> todo
  }
}
