language-server/src/tests/snapshots/gleam_language_server__tests__action__add_missing_patterns_adds_patterns_for_internal_type_inside_same_module_where_it_is_defined.snap
---
source: language-server/src/tests/action.rs
expression: "\n@internal\npub type Wibble {\n  Wibble(Int)\n  Wobble(String)\n}\n\npub fn main(thing: Wibble) {\n  case thing {}\n}\n"
---
----- BEFORE ACTION

@internal
pub type Wibble {
  Wibble(Int)
  Wobble(String)
}

pub fn main(thing: Wibble) {
  case thing {}
       ↑       
}


----- AFTER ACTION

@internal
pub type Wibble {
  Wibble(Int)
  Wobble(String)
}

pub fn main(thing: Wibble) {
  case thing {
    Wibble(_) -> todo
    Wobble(_) -> todo
  }
}
