language-server/src/tests/snapshots/gleam_language_server__tests__action__add_missing_patterns_bool.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main(bool: Bool) {\n  case bool {}\n}\n"
---
----- BEFORE ACTION

pub fn main(bool: Bool) {
  case bool {}
  ▔▔▔▔▔↑      
}


----- AFTER ACTION

pub fn main(bool: Bool) {
  case bool {
    True -> todo
    False -> todo
  }
}
