language-server/src/tests/snapshots/gleam_language_server__tests__action__add_missing_patterns_custom_type.snap
---
source: language-server/src/tests/action.rs
expression: "\ntype Wibble {\n  Wibble\n  Wobble\n  Wubble\n}\n\npub fn main(wibble: Wibble) {\n  case wibble {\n    Wobble -> Nil\n  }\n}\n"
---
----- BEFORE ACTION

type Wibble {
  Wibble
  Wobble
  Wubble
}

pub fn main(wibble: Wibble) {
  case wibble {
  ▔▔▔▔▔↑       
    Wobble -> Nil
  }
}


----- AFTER ACTION

type Wibble {
  Wibble
  Wobble
  Wubble
}

pub fn main(wibble: Wibble) {
  case wibble {
    Wobble -> Nil
    Wibble -> todo
    Wubble -> todo
  }
}
